resolve again....send help #2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,12 +30,14 @@ jobs:
       - name: Determine Branch Type
         id: get_branch_type
         run: |
-          # Print GITHUB_REF for debugging
-          echo "GITHUB_REF=$GITHUB_REF"
-
-          # Extract branch name from GITHUB_REF
-          branch_name=${GITHUB_REF#refs/heads/}
-          echo "Branch name: $branch_name"
+          # Check if the event is a pull request
+          if [[ -f "$GITHUB_EVENT_PATH" ]]; then
+            branch_name=$(jq -r .pull_request.head.ref < "$GITHUB_EVENT_PATH")
+            echo "Branch name from PR: $branch_name"
+          else
+            branch_name=${GITHUB_REF#refs/heads/}
+            echo "Branch name from push: $branch_name"
+          fi
 
           # Determine branch type based on branch name
           if [[ "$branch_name" == release/* ]]; then
@@ -48,7 +50,6 @@ jobs:
           fi
 
           echo "branch_type=$branch_type" >> $GITHUB_ENV
-        shell: /usr/bin/bash -e {0}
 
       - name: Increment version
         id: increment_version
