--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,13 @@
 name: Create Release
 
 on:
-  pull_request:
+  push:
     branches:
       - main
 
 permissions:
-  contents: write  # Allow the workflow to push tags, rebase, and create releases
+  contents: write
+  issues: write
 
 jobs:
   create-release:
@@ -19,28 +20,23 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Fetch all history to ensure rebase works correctly
+          fetch-depth: 0
 
-      # Get the latest release tag
       - name: Get latest version
         id: get_latest_version
         run: |
           latest_tag=$(gh release list --limit 1 --json tagName --jq '.[0].tagName' || echo "1.0.0")
           echo "latest_tag=$latest_tag" >> $GITHUB_ENV
 
-      # Get the branch name from the pull request
-      - name: Determine Branch Type
-        id: get_branch_type
+      - name: Get the branch being merged into main
+        id: get_branch_name
         run: |
-          # Print GITHUB_REF for debugging
-          echo "GITHUB_REF=$GITHUB_REF"
-          echo "GITHUB_EVENT_PATH=$GITHUB_EVENT_PATH"
+          # Get the merge commit SHA
+          merge_commit_sha=$(git log -1 --pretty=%H)
           
-          # Extract branch name from the pull request event
-          branch_name=$(jq -r .pull_request.head.ref < "$GITHUB_EVENT_PATH")
-          echo "Branch name: $branch_name"
+          # Find the branch name being merged into main
+          branch_name=$(git branch -r --contains "$merge_commit_sha" | grep -E 'origin/(release|hotfix)/' | sed 's/origin\///')
           
-          # Determine branch type based on branch name
           if [[ "$branch_name" == release/* ]]; then
             branch_type="release"
           elif [[ "$branch_name" == hotfix/* ]]; then
@@ -49,11 +45,10 @@ jobs:
             echo "Branch does not match expected patterns"
             exit 1
           fi
-          
-          echo "branch_type=$branch_type" >> $GITHUB_ENV
-        shell: /usr/bin/bash -e {0}
 
-      # Set the next version based on the branch type
+          echo "branch_type=$branch_type" >> $GITHUB_ENV
+          echo "branch_name=$branch_name" >> $GITHUB_ENV
+
       - name: Increment version
         id: increment_version
         run: |
@@ -72,26 +67,21 @@ jobs:
 
           echo "new_tag=$new_tag" >> $GITHUB_ENV
 
-      # Draft the release notes using Release Drafter
-      - name: Draft Release Notes
-        uses: release-drafter/release-drafter@v5
-        with:
-          config-name: .github/release-drafter.yml
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      # Create the new tag and GitHub release with auto-generated notes
-      - name: Create Release
+      - name: Create the new tag and GitHub release
         run: |
           gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --generate-notes
 
-      # Rebase develop with main (only for hotfixes)
+      - name: Generate release notes
+        id: generate_release_notes
+        run: |
+          gh release edit ${{ env.new_tag }} --notes "Release notes generated for ${{ env.branch_name }}"
+
       - name: Rebase develop with main for hotfixes
-        if: env.branch_type == 'hotfix'  # Only do this for hotfixes
+        if: env.branch_type == 'hotfix'
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
           git fetch origin develop
           git checkout develop
           git rebase origin/main
-          git push origin develop --force-with-lease  # Use --force-with-lease to safely force push
+          git push origin develop --force-with-lease
