--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -62,17 +62,19 @@ jobs:
           fi
           echo "new_tag=$new_tag" >> $GITHUB_ENV
 
-      - name: Tag the new version
-        run: |
-          # Create a new release tag
-          gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --notes ""
+      # Draft the release notes using Release Drafter
+      - name: Draft Release Notes
+        uses: release-drafter/release-drafter@v5
+        with:
+          config-name: .github/release-drafter.yml
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Generate and apply release notes
-        id: generate_release_notes
+      # Create the new tag and GitHub release with auto-generated notes
+      - name: Create Release
         run: |
-          # Use GitHub CLI to generate release notes for the new tag
-          release_notes=$(gh release view ${{ env.new_tag }} --json body --jq '.body')
-          echo "release_notes=$release_notes" >> $GITHUB_ENV
+          gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --generate-notes
+
 
       - name: Rebase develop with main for hotfixes
         if: env.branch_type == 'hotfix'  # Only do this for hotfixes
