--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,28 @@
 name-template: 'Release {version}'
 tag-template: 'v$VERSION'
+template: |
+  ## Release Notes for {version}
+  
+  **Release Date:** $RELEASE_DATE
+  
+  ### 🛠 Breaking Changes
+  $BREAKING_CHANGES
+  
+  ### 🎉 New Features
+  $FEATURES
+  
+  ### 🐛 Fixes
+  $FIXES
+  
+  ### 🔄 Improvements
+  $IMPROVEMENTS
+  
+  ### 📜 Other Changes
+  $OTHER_CHANGES
+  
+  ### 🙏 Thanks to Contributors
+  $CONTRIBUTORS
+
 categories:
   - title: Breaking Changes 🛠
     labels:
