--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,7 +65,9 @@ jobs:
       - name: Create Release
         run: |
           gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --notes "$(gh release view ${{ env.new_tag }} --json body --jq '.body')"
-
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Ensure GH_TOKEN is set here
+          
       - name: Rebase develop with main for hotfixes
         if: env.branch_type == 'hotfix'
         run: |
