--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,7 +75,28 @@ jobs:
       - name: Wait for Release Notes to be Drafted
         run: |
           echo "Waiting for release notes to be drafted..."
-          sleep 20
+          sleep 30
+
+      - name: Check if Release Exists and Retry if Needed
+        id: check_release
+        run: |
+          echo "Checking if release exists..."
+          for i in {1..5}; do
+            release_info=$(gh release view ${{ env.new_tag }} --json tagName 2>/dev/null)
+            if [[ -n "$release_info" ]]; then
+              echo "Release found."
+              break
+            else
+              echo "Release not found. Retrying in 10 seconds..."
+              sleep 10
+            fi
+          done
+          if [[ -z "$release_info" ]]; then
+            echo "Error: Release not found after retries."
+            exit 1
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create Release
         run: |
