--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Create Release v1
+name: Create Release
 
 on:
   push:
@@ -66,6 +66,7 @@ jobs:
           echo "new_tag=$new_tag" >> $GITHUB_ENV
 
       - name: Draft Release Notes
+        id: draft_release_notes
         uses: release-drafter/release-drafter@v5
         with:
           config-name: release-drafter.yml
@@ -73,41 +74,19 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Wait for Release Notes to be Drafted
-        run: |
-          echo "Waiting for release notes to be drafted..."
-          sleep 30
+        run: sleep 30 # Adjust the sleep time if needed to ensure notes are drafted
 
-      - name: Check if Release Exists and Retry if Needed
-        id: check_release
+      - name: Store Release Notes
+        id: store_release_notes
         run: |
-          echo "Checking if release exists..."
-          for i in {1..5}; do
-            release_info=$(gh release view ${{ env.new_tag }} --json tagName 2>/dev/null)
-            if [[ -n "$release_info" ]]; then
-              echo "Release found."
-              break
-            else
-              echo "Release not found. Retrying in 10 seconds..."
-              sleep 10
-            fi
-          done
-          if [[ -z "$release_info" ]]; then
-            echo "Error: Release not found after retries."
-            exit 1
-          fi
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          echo "Storing release notes..."
+          notes=$(gh release view ${{ env.new_tag }} --json body --jq '.body' 2>/dev/null || echo "No notes found")
+          echo "release_notes=$notes" >> $GITHUB_ENV
 
       - name: Create Release
         run: |
           echo "Creating release..."
-          notes=$(gh release view ${{ env.new_tag }} --json body --jq '.body' 2>/dev/null || echo "No notes found")
-          if [[ "$notes" == "No notes found" ]]; then
-            echo "Warning: No release notes found. Creating release with default message."
-            gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --notes "Release notes are not available."
-          else
-            gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --notes "$notes"
-          fi
+          gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --notes "${{ env.release_notes }}"
           echo "Release created: ${{ env.new_tag }}"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
