--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,27 +1,27 @@
 name-template: 'Release {version}'
-tag-template: 'v$VERSION'
+tag-template: 'v{version}'
 template: |
-  ## Release Notes for (test) {version}
+  ## Release Notes for {version}
   
-  **Release Date:** $RELEASE_DATE
+  **Release Date:** {date}
   
   ### 🛠 Breaking Changes
-  $BREAKING_CHANGES
+  {changes-breaking}
   
   ### 🎉 New Features
-  $FEATURES
+  {changes-features}
   
   ### 🐛 Fixes
-  $FIXES
+  {changes-fixes}
   
   ### 🔄 Improvements
-  $IMPROVEMENTS
+  {changes-improvements}
   
   ### 📜 Other Changes
-  $OTHER_CHANGES
+  {changes-other}
   
   ### 🙏 Thanks to Contributors
-  $CONTRIBUTORS
+  {contributor-list}
 
 categories:
   - title: Breaking Changes 🛠
@@ -31,7 +31,7 @@ categories:
     labels:
       - bug
       - fix
-      - defect 
+      - defect
   - title: Exciting New Features 🎉
     labels:
       - feature
