--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,14 +37,17 @@ jobs:
           echo "Branch name extracted: $branch_name"
           if [[ "$branch_name" == release/* ]]; then
             branch_type="release"
+            config_file="release-drafter-minor.yml"
           elif [[ "$branch_name" == hotfix/* ]]; then
             branch_type="hotfix"
+            config_file="release-drafter-patch.yml"
           else
             echo "Branch does not match expected patterns"
             exit 1
           fi
           echo "Branch type determined: $branch_type"
           echo "branch_type=$branch_type" >> $GITHUB_ENV
+          echo "config_file=$config_file" >> $GITHUB_ENV
 
       - name: Increment version
         id: increment_version
@@ -65,31 +68,24 @@ jobs:
           echo "New tag calculated: $new_tag"
           echo "new_tag=$new_tag" >> $GITHUB_ENV
 
-      - name: Draft Release Notes
+      - name: Draft Release Notes (Minor or Patch)
         uses: release-drafter/release-drafter@v5
         with:
-          config-name: release-drafter.yml
+          config-name: ${{ env.config_file }}  # Use correct drafter file based on branch type
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Wait for Release Notes to be Drafted
-        run: sleep 30
-
-      - name: Fetch Drafted Release Notes
-        id: fetch_notes
-        run: |
-          draft_notes=$(gh release view ${{ env.new_tag }} --json body --jq '.body' 2>/dev/null || echo "No notes found")
-          echo "Drafted Notes: $draft_notes"
-          echo "draft_notes=$draft_notes" >> $GITHUB_ENV
+        run: sleep 30 # Adjust if needed to ensure notes are drafted
 
       - name: Create Release
         run: |
           echo "Creating release..."
-          gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --notes "${{ env.draft_notes }}"
+          notes=$(gh release view ${{ env.new_tag }} --json body --jq '.body' 2>/dev/null || echo "No notes found")
+          gh release create ${{ env.new_tag }} --title "Release ${{ env.new_tag }}" --target main --notes "$notes"
           echo "Release created: ${{ env.new_tag }}"
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }} # <-- Ensure this is passed here
-      
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Rebase develop with main for hotfixes
         if: env.branch_type == 'hotfix'
