--- a/.github/release-drafter-minor.yml
+++ b/.github/release-drafter-minor.yml
@@ -1,5 +1,5 @@
 name-template: 'Release {version}'
-tag-template: '$NEXT_MINOR_VERSION'
+tag-template: '$VERSION'
 template: |
   ## Minor Release Notes for {version}
   
